<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">



    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/icon_border"
        android:contentDescription="@string/launcher"
        android:elevation="15dp"
        android:foregroundGravity="center"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <EditText
        android:id="@+id/activity_login_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_email"
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawablePadding="5dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo"/>

    <EditText
        android:id="@+id/activity_login_et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_password"
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/ic_vpn_key_black_24dp"
        android:drawablePadding="5dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_login_et_email" />

    <TextView
        android:id="@+id/activity_login_tw_resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/quantum_white_100"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_login_btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_et_password"/>

    <Button
        android:id="@+id/activity_login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_style"
        android:enabled="false"
        android:text="@string/action_sign_in"
        android:textAlignment="center"
        android:textColor="@color/quantum_white_100"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_login_tw_resetPassword" />

    <ProgressBar
        android:id="@+id/activity_login_pb_loading"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/activity_login_et_password"
        app:layout_constraintStart_toStartOf="@id/activity_login_et_password"
        app:layout_constraintTop_toBottomOf="@id/activity_login_btn_login" />


    <TextView
        android:id="@+id/activity_login_tw_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/tw_signUp"
        android:textAlignment="center"
        android:textColor="@color/quantum_white_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_btn_login"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/activity_login_tw_signInPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/tw_restaurantOwner"
        android:textColor="@color/quantum_white_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_login_tw_signIn"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>